--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
 	height: 97vh;
 }
 
-@media screen and (min-width: 300px) {
+@media only screen and (max-width: 300px) {
 	.navitem {
 		font-size: 30px;
 	}
